<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/overview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/quantity_decrementor"
                style="@style/ButtonStyle"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/quantity_display"
                style="@style/ButtonStyle" />

            <Button
                android:id="@+id/quantity_incrementor"
                style="@style/ButtonStyle"
                android:text="@string/increment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/contact_number" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_call" />
</RelativeLayout>
